templates/python-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion-api-ingress
  namespace: vectoratlas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # This removes "/ingestion-api" from the URL
spec:
  rules:
  - host: test.vectoratlas.icipe.org
    http:
      paths:
        - path: /ingestion-api(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: python-backend   # Name of the service handling ingestion
              port:
                number: 8000        # Port the service listens on
  ingressClassName: nginx
